--- a/Assignment 3/handleDigit.ipynb
+++ b/Assignment 3/handleDigit.ipynb
@@ -20,7 +20,7 @@
    "source": [
     "import json\n",
     "import random\n",
-    "from standardDisplay import *\n",
+    "#from standardDisplay import *\n",
     "\n",
     "def handleDigit(digit):\n",
     "    #write to stream\n",
@@ -37,8 +37,8 @@
     "    writeJSONToFile(stream)\n",
     "    \n",
     "    #display the stream\n",
-    "    stdDis.changeOutput(streamToString(stream))\n",
-    "    stdDis.printOutput()\n",
+    "    #stdDis.changeOutput(streamToString(stream))\n",
+    "    #stdDis.printOutput()\n",
     "\n",
     "def writeJSONToFile(j):\n",
     "    f = open('inputStream.txt', 'w')\n",
