--- a/Assignment 3/standardDisplay.ipynb
+++ b/Assignment 3/standardDisplay.ipynb
@@ -2,17 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "hello\n",
-      "there\n",
-      "general\n",
-      "kenobi\n"
+     "ename": "IndentationError",
+     "evalue": "expected an indented block (<ipython-input-1-6d1e3126839e>, line 11)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-1-6d1e3126839e>\"\u001b[1;36m, line \u001b[1;32m11\u001b[0m\n\u001b[1;33m    def printOutput():\u001b[0m\n\u001b[1;37m    ^\u001b[0m\n\u001b[1;31mIndentationError\u001b[0m\u001b[1;31m:\u001b[0m expected an indented block\n"
      ]
     }
    ],
@@ -29,9 +27,7 @@
     "\n",
     "def printOutput():\n",
     "    for line in output:\n",
-    "        print(line)\n",
-    "        \n",
-    "printOutput()"
+    "        print(line)"
    ]
   },
   {
